--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -13,7 +13,7 @@
     max-width: 50%;
     bottom: 10%;
     left: 6vw;
-    animation: fadeIn 3s ease-in;
+    animation: fadeIn 1s ease-in;
 
 }
 .header-content h2{
@@ -36,5 +36,24 @@
     font-size: max(1vw 13px);
     border-radius: 50px;
 
+}
+@media (max-width:1050px) {
+    .header-content{
+        max-width: 45%;
+    }
+    
+}
+@media (max-width:750px) {
+ 
+    .header-content{
+        max-width: 65%;
+    }
+    .header-content p{
+        display: none;
+    }
+    .header-content button{
+        padding: 2vw 4vw;
+    }
+    
 }
 
