--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -31,7 +31,9 @@
 .footer-social-icons img{
     width: 40px;
     margin-right: 15px;
-
+}
+.footer-social-icons img:hover{
+    transform: scale(1.05);
 }
 .footer hr{
     width: 100%;
